# OPPM-AI-work-management-system

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COMPLETION-SUMMARY.md  CONTRIBUTING.md  DEVELOPMENT.md  GATEWAY-502-ANALYSIS.md  INTERVIEW-COMPLETE.md  INTERVIEW-PREP-FINAL-GUIDE.md  INTERVIEW-PREP-GUIDE.md  INTERVIEW-PREP-MASTER-INDEX.md  INTERVIEW-QUICK-CARD.md  MICROSERVICES.md  PORTFOLIO-CHECKLIST.md  README.md  START-HERE.md  check_membership.py  check_user_cols.py  db_data_check.txt  db_final_inspection.txt  db_inspection.txt  db_oppm_inspection.txt  debug_borders.py  decode_token.py  docker-compose.dev.yml  docker-compose.dual-frontend.yml  docker-compose.microservices.yml  docker-compose.yml  get_fresh_token.py  inspect_db.py  login.json  package-lock.json  push.json  quick.md  run_ai_service.py  seed_data.ps1  seed_demo.ps1  seed_nhrs.ps1  seed_nhrs_reset.ps1  (+13 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
apps/: .env.example
backend/: .env  config.py  database.py  main.py  requirements.txt  schemas.py
doc/: README.md
docs/: AI-AGENT-ARCHITECTURE-RESEARCH.md  AI-AGENT-IMPLEMENTATION-PLAN.md  AI-PIPELINE-REFERENCE.md  (+22 more)
shared/: __init__.py  auth.py  base_repository.py  config.py  database.py  pyproject.toml  redis_client.py
shared/exceptions/: __init__.py  base.py
shared/models/: __init__.py  agile.py  ai_model.py  embedding.py  notification.py  oppm.py  project.py  project_file.py  task.py  user.py  workspace.py  workspace_ai_config.py
shared/perception/: __init__.py  template_reference.py
shared/schemas/: common.py
(+888 files in other folders)
